[package]
name = "ic-cron"
version = "0.5.0"
authors = ["Александр Втюрин <senior.joinu@gmail.com>"]
edition = "2018"
description = "Task scheduler rust library for the Internet Computer"
license = "MIT"
readme = "../README.md"
keywords = ["dfinity", "internet-computer", "ic", "cron", "cronjob"]

[dependencies]
ic-cdk = "0.3"
ic-cdk-macros = "0.3"
serde = "1.0"