[package]
name = "ic-cron"
version = "0.6.1"
authors = ["Александр Втюрин <senior.joinu@gmail.com>"]
edition = "2018"
description = "Task scheduler rust library for the Internet Computer"
license = "MIT"
readme = "../README.md"
keywords = ["dfinity", "internet-computer", "ic", "cron", "cronjob"]

[dependencies]
ic-cdk = "0.4.0"
ic-cdk-macros = "0.4.0"
serde = "1.0"
candid = "0.7.11"