[package]
name = "ic-cron"
version = "0.7.1"
authors = ["Александр Втюрин <senior.joinu@gmail.com>"]
edition = "2018"
description = "Task scheduler rust library for the Internet Computer"
license = "MIT"
readme = "../README.md"
keywords = ["dfinity", "internet-computer", "ic", "cron", "cronjob"]

[dependencies]
ic-cdk = "0.6.6"
ic-cdk-macros = "0.6.6"
serde = "1.0.147"
candid = "0.8.3"